--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "esbuild-plugin-eslint": "^0.3.12",
     "eslint": "^9.0.0",
     "express": "^4.19.2",
+    "mysql2": "^3.9.5",
     "tsx": "^4.7.2"
   },
   "devDependencies": {
@@ -25,6 +26,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0"
   }
 }
