--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "eslint": "^8.57.0"
+  }
 }
